# test-fast-api

./: README.md
.github/workflows/: _backend_build.yaml  _deploy.yaml  _lint.yaml  _test.yaml  build-and-test-feat.yaml  check-pr-to-main.yaml  deploy-to-prod.yaml
charts/: index-cache.yaml  items-api-0.1.1.tgz
helm/: Chart.yaml  items-api-0.1.0.tgz  items-store-0.1.1.tgz
k8s/: namespace.yaml
kustomize/backend/base/: deployment.yaml  kustomization.yaml  service.yaml
kustomize/backend/overlay/dev/: kustomization.yaml
kustomize/backend/overlay/local/: kustomization.yaml
kustomize/backend/overlay/prod/: kustomization.yaml
kustomize/frontend/: deployment.yaml  service.yaml
src/backend/: .dockerignore  Dockerfile  Makefile  main.py  pyproject.toml  test_main.py
src/frontend/: Dockerfile
src/frontend/src/: App.js  App.test.js
